--- a/admin/forms/podcast.xml
+++ b/admin/forms/podcast.xml
@@ -49,11 +49,12 @@
 		<option value="*">JALL</option>
 	</field>
 	<field name="detailstemplateid" type="sql"
-	       label="JBS_PDC_TEMPLATE_FOR_DETAILS_VIEW_LINK" query="SELECT id, title FROM #__bsms_templates ORDER BY title ASC"
-		   key_field="id"
-		   value_field="title" labelclass="control-label">
-	<option value="-1">JBS_CMN_SELECT_USER</option>
-</field>
+	       label="JBS_PDC_TEMPLATE_FOR_DETAILS_VIEW_LINK"
+	       query="SELECT id, title FROM #__bsms_templates ORDER BY title ASC"
+	       key_field="id"
+	       value_field="title" labelclass="control-label">
+		<option value="-1">JBS_CMN_SELECT_USER</option>
+	</field>
 	<field name="image" type="media" label="JBS_PDC_IMAGE" directory="biblestudy"
 	       description="JBS_PDC_IMAGE_DESC"/>
 	<field name="podcastimage" type="media" label="JBS_PDC_PODCAST_LOGO" directory="biblestudy"
