--- a/admin/forms/serie.xml
+++ b/admin/forms/serie.xml
@@ -33,7 +33,7 @@
 			<option value="2">JBS_CMN_SHOW_BELOW_LANDING</option>
 		</field>
 		<field name="pc_show" type="radio" class="btn-group" default="0" label="JBS_ADM_SERIE_PC_SHOW"
-		               description="JBS_ADM_SERIE_PC_SHOW_DESC" labelclass="control-label">
+		       description="JBS_ADM_SERIE_PC_SHOW_DESC" labelclass="control-label">
 			<option value="0">JNO</option>
 			<option value="1">JYES</option>
 		</field>
@@ -50,7 +50,8 @@
 		       label="JBS_CMN_DESCRIPTION" filter="CWMProclaimHelper::filterText"
 		       buttons="true"/>
 		<field name="series_thumbnail" type="hidden"/>
-		<field name="image" type="media" directory="biblestudy" label="JBS_CMN_SERIES_THUMBNAIL" labelclass="control-label"/>
+		<field name="image" type="media" directory="biblestudy" label="JBS_CMN_SERIES_THUMBNAIL"
+		       labelclass="control-label"/>
 		<field name="access" type="accesslevel" label="JFIELD_ACCESS_LABEL"
 		       description="JFIELD_ACCESS_DESC" class="span12 small" size="1"/>
 		<field name="asset_id" type="hidden" filter="unset"/>
