--- a/admin/forms/topic.xml
+++ b/admin/forms/topic.xml
@@ -8,7 +8,8 @@
 		<option value="0">JUNPUBLISHED</option>
 		<option value="-2">JTRASHED</option>
 	</field>
-	<field name="language" type="contentlanguage" label="JFIELD_LANGUAGE_LABEL" description="com_proclaim_LANGUAGE_DESC">
+	<field name="language" type="contentlanguage" label="JFIELD_LANGUAGE_LABEL"
+	       description="com_proclaim_LANGUAGE_DESC">
 		<option value="*">JALL</option>
 	</field>
 	<field name="rules" type="rules" label="JFIELD_RULES_LABEL" translate_label="false" class="inputbox" filter="rules"
