--- a/site/forms/filter_messagelist.xml
+++ b/site/forms/filter_messagelist.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <form>
-	<fieldset addfieldpath="/administrator/components/com_proclaim/models/fields">
+	<fieldset addfieldprefix="CWM\Component\Proclaim\Administrator\Field">
 	<fields name="filter">
 		<field
 				name="search"
@@ -19,7 +19,7 @@
 		</field>
 		<field
 				name="year"
-				type="Yearlist"
+				type="YearList"
 				label="JBS_CMN_SELECT_YEAR"
 				description="JBS_CMN_SELECT_YEAR_DESC"
 				onchange="this.form.submit();"
@@ -28,7 +28,7 @@
 		</field>
 		<field
 				name="book"
-				type="Booklist"
+				type="type="RowOptions""
 				label="JBS_CMN_SELECT_BOOK"
 				description="JBS_CMN_SELECT_BOOK_DESC"
 				onchange="this.form.submit();"
@@ -37,7 +37,7 @@
 		</field>
 		<field
 				name="teacher"
-				type="Teacherlist"
+				type="TeacherList"
 				label="JBS_CMN_SELECT_TEACHER"
 				description="JBS_CMN_SELECT_TEACHER_DESC"
 				onchange="this.form.submit();"
@@ -55,7 +55,7 @@
 		</field>
 		<field
 				name="location"
-				type="Locationlist"
+				type="LocationList"
 				label="JBS_CMN_SELECT_LOCATION"
 				description="JBS_CMN_SELECT_LOCATION_DESC"
 				onchange="this.form.submit();"
