--- a/site/forms/comment.xml
+++ b/site/forms/comment.xml
@@ -37,7 +37,7 @@
 	       size="30"/>
 	<field name="user_email" type="text" label="JBS_CMT_EMAIL" size="40"/>
 	<field name="comment_text" type="editor" label="JBS_CMN_COMMENT" class="inputbox"
-	       rows="10" cols="50" filter="JBSMBibleStudyHelper::filterText" buttons="true"/>
+	       rows="10" cols="50" filter="CWMProclaimHelper::filterText" buttons="true"/>
 	<field name="rules" type="rules" label="JFIELD_RULES_LABEL"
 	       translate_label="false" class="inputbox" filter="rules" component="com_proclaim"
 	       section="comment" validate="rules"/>
