Found error in addon that will not display right on server. Still working through the new server creation error.

--- a/admin/forms/server.xml
+++ b/admin/forms/server.xml
@@ -21,8 +21,7 @@
 				JTRASHED
 			</option>
 		</field>
-		<field
-				name="type"
+		<field name="type"
 				type="Modal_ServerType"
 				label="JBS_CMN_SERVER"
 				description="JBS_MED_SERVER_DESC"
