--- a/site/forms/message.xml
+++ b/site/forms/message.xml
@@ -127,7 +127,7 @@
         <field name="image" type="media" label="JBS_STY_STUDY_IMAGE" class="span12" accept="image/*"/>
         <field name="studytext" type="editor" class="inputbox" label="JBS_STY_STUDY_TEXT"
                filter="CWMProclaimHelper::filterText" buttons="true"/>
-        <field name="rules" type="rules" label="JFIELD_RULES_LABEL"
+        <field name="rules" type="rules" label="JCONFIG_PERMISSIONS_LABEL"
                translate_label="false" class="inputbox" filter="rules" component="com_proclaim"
                section="message" validate="rules"/>
 
