--- a/admin/forms/message.xml
+++ b/admin/forms/message.xml
@@ -131,7 +131,7 @@
 		<field name="image" type="media" directory="biblestudy/studies" label="JBS_STY_STUDY_IMAGE"/>
 
 
-		<field name="rules" type="rules" label="JFIELD_RULES_LABEL"
+		<field name="rules" type="rules" label="JCONFIG_PERMISSIONS_LABEL"
 		       translate_label="false" class="inputbox" filter="rules" component="com_proclaim"
 		       section="message" validate="rules"/>
 
