--- a/admin/forms/messagetype.xml
+++ b/admin/forms/messagetype.xml
@@ -1,19 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <form>
 	<field name="published"
-	       type="lsit"
-	       class="span12 small"
-	       id="published"
-	       label="JSTATUS"
-	       description="JFIELD_PUBLISHED_DESC"
-	       size="1"
-	       default="1"
-	       filter="integer">
+		   type="list"
+		   class="chzn-color-state"
+		   id="published"
+		   label="JSTATUS"
+		   description="JFIELD_PUBLISHED_DESC"
+		   default="1"
+		   size="1"
+		   filter="intval">
 		<option value="1">
 			JPUBLISHED
 		</option>
 		<option value="0">
 			JUNPUBLISHED
+		</option>
+		<option value="2">
+			JARCHIVED
 		</option>
 		<option value="-2">
 			JTRASHED
@@ -29,16 +32,18 @@
 	       size="30"
 	/>
 	<field name="landing_show" default="1" type="list" label="JBS_CMN_LANDING_SHOW"
-	       description="JBS_CMN_LANDING_SHOW_DESC">
+	       description="JBS_CMN_LANDING_SHOW_DESC"
+		   class="chzn-color-state"
+		   filter="intval">
 		<option value="0">JBS_CMN_NO_SHOW_LANDING</option>
 		<option value="1">JBS_CMN_SHOW_ABOVE_LANDING</option>
 		<option value="2">JBS_CMN_SHOW_BELOW_LANDING</option>
 	</field>
 	<field name="asset_id" type="hidden" filter="unset"/>
-	<field name="rules" type="rules" label="JFIELD_RULES_LABEL"
+	<field name="rules" type="rules" label="JCONFIG_PERMISSIONS_LABEL"
 	       translate_label="false" class="inputbox" filter="rules" component="com_proclaim"
 	       section="messagetype" validate="rules"/>
-	<field name="id" type="text" label="JGLOBAL_FIELD_ID_LABEL"
-	       description="JGLOBAL_FIELD_ID_DESC" size="10" default="0" readonly="true"
-	       class="readonly span12 small"/>
+	<field name="id" type="text" class="readonly" label="JGLOBAL_FIELD_ID_LABEL"
+		   description="JGLOBAL_FIELD_ID_DESC" size="10" default="0"
+		   readonly="true"/>
 </form>
