--- a/admin/forms/podcast.xml
+++ b/admin/forms/podcast.xml
@@ -10,17 +10,13 @@
 			size="1"
 			default="1"
 			filter="integer">
-		<option
-				value="1">
+		<option value="1">
 			JPUBLISHED
 		</option>
-		<option
-				value="0">
+		<option value="0">
 			JUNPUBLISHED
 		</option>
-
-		<option
-				value="-2">
+		<option value="-2">
 			JTRASHED
 		</option>
 	</field>
@@ -97,8 +93,8 @@
 	</field>
 	<field name="customsubtitle" type="textarea" label="JBS_CMN_CUSTOM"
 	       description="JBS_PDC_EPISODES_CUSTOM_DESC" size="20" cols="48" rows="2" class="inputbox"/>
-	<field name="rules" type="rules" label="JFIELD_RULES_LABEL"
-	       translate_label="false" class="inputbox" filter="rules" component="com_proclaim"
+	<field name="rules" type="rules" label="JCONFIG_PERMISSIONS_LABEL"
+		   translate_label="true" class="inputbox" filter="rules" component="com_proclaim"
 	       section="podcast" validate="rules"/>
 	<field name="asset_id" type="hidden" filter="unset"/>
 	<field name="id" type="text" label="JGLOBAL_FIELD_ID_LABEL"
