--- a/admin/forms/teacher.xml
+++ b/admin/forms/teacher.xml
@@ -64,7 +64,7 @@
 		       label="JBS_TCH_INFORMATION" filter="CWMProclaimHelper::filterText"
 		       buttons="true"/>
 		<field name="asset_id" type="hidden" filter="unset"/>
-		<field name="rules" type="rules" label="JFIELD_RULES_LABEL"
+		<field name="rules" type="rules" label="JCONFIG_PERMISSIONS_LABEL"
 		       translate_label="false" class="inputbox" filter="rules" component="com_proclaim"
 		       section="teacher" validate="rules"/>
 		<field name="language" type="contentlanguage" label="JFIELD_LANGUAGE_LABEL"
