--- a/admin/forms/template.xml
+++ b/admin/forms/template.xml
@@ -2241,7 +2241,7 @@
 
 	</fields>
 	<field name="asset_id" type="hidden" filter="unset"/>
-	<field name="rules" type="rules" label="JFIELD_RULES_LABEL"
+	<field name="rules" type="rules" label="JCONFIG_PERMISSIONS_LABEL"
 	       translate_label="false" class="inputbox" filter="rules" component="com_proclaim"
 	       section="template" validate="rules"/>
 </form>
