--- a/admin/forms/templatecode.xml
+++ b/admin/forms/templatecode.xml
@@ -39,7 +39,7 @@
 	       label="JBS_TPLCODE_CODE" description="JBS_TPLCODE_CODE_DESC"
 	       required="true" filter="raw"/>
 	<field name="asset_id" type="hidden" filter="unset"/>
-	<field name="rules" type="rules" label="JFIELD_RULES_LABEL"
+	<field name="rules" type="rules" label="JCONFIG_PERMISSIONS_LABEL"
 	       translate_label="false" class="inputbox" filter="rules" component="com_proclaim"
 	       section="style" validate="rules"/>
 	<field name="id" type="text" label="JGLOBAL_FIELD_ID_LABEL"
