--- a/admin/forms/topic.xml
+++ b/admin/forms/topic.xml
@@ -12,7 +12,7 @@
 	       description="com_proclaim_LANGUAGE_DESC">
 		<option value="*">JALL</option>
 	</field>
-	<field name="rules" type="rules" label="JFIELD_RULES_LABEL" translate_label="false" class="inputbox" filter="rules"
+	<field name="rules" type="rules" label="JCONFIG_PERMISSIONS_LABEL" translate_label="false" class="inputbox" filter="rules"
 	       component="com_proclaim" section="topic" validate="rules"/>
 	<field name="asset_id" type="hidden" filter="unset"/>
 	<field name="id" type="hidden" default="0" readonly="true"/>
