--- a/site/forms/mediafile.xml
+++ b/site/forms/mediafile.xml
@@ -36,7 +36,7 @@
 			<option value="*">JALL</option>
 		</field>
 		<field name="asset_id" type="hidden" filter="unset"/>
-		<field name="rules" type="rules" label="JFIELD_RULES_LABEL"
+		<field name="rules" type="rules" label="JCONFIG_PERMISSIONS_LABEL"
 		       translate_label="false" class="inputbox" filter="rules" component="com_proclaim"
 		       section="mediafile" validate="rules"/>
 		<!--Server media specific fields-->
