--- a/admin/forms/mediafile.xml
+++ b/admin/forms/mediafile.xml
@@ -44,6 +44,7 @@
 		       class="chzn-color-state">
 			<option value="*">JALL</option>
 		</field>
+		<field name="metadata" type="hidden" filter="unset"/>
 		<field name="asset_id" type="hidden" filter="unset"/>
 		<field name="rules" type="rules" label="JCONFIG_PERMISSIONS_LABEL"
 		       translate_label="false" class="inputbox" filter="rules" component="com_proclaim"
