--- a/admin/forms/mediafile.xml
+++ b/admin/forms/mediafile.xml
@@ -49,7 +49,8 @@
         <field name="rules" type="rules" label="JCONFIG_PERMISSIONS_LABEL"
                translate_label="false" class="inputbox" filter="rules" component="com_proclaim"
                section="mediafile" validate="rules"/>
-
+        <field name="access" type="accesslevel" label="JFIELD_ACCESS_LABEL"
+               description="JFIELD_ACCESS_DESC"/>
         <!--Server media specific fields-->
         <field name="params"/>
     </fieldset>
